# glacier-dialer

./: .gitignore  CMakeLists.txt  com.nokia.telephony.callhistory.service  glacier-dialer.desktop  glacier-dialer.pro  glacier-dialer.service  org.glacier.voicecall.ui.service  voicecall-ui-prestart.service
i18n/: glacier-dialer.ts
qml/: glacier-dialer.qml
qml/components/: DialerButton.qml  LogDelegate.qml  VoicecallService.qml
qml/pages/: CallLogPage.qml  CallView.qml  ContactDelegate.qml  ContactDetails.qml  ContactsPage.qml  DialerButton.qml  DialerPage.qml  FirstPage.qml  LogDelegate.qml  SecondPage.qml
rpm/: glacier-dialer.spec
src/: CMakeLists.txt  dbusadaptor.cpp  dbusadaptor.h  declarativeview.cpp  declarativeview.h  glacier-dialer.cpp
src/qml/: glacier-dialer.qml  glacier-dialer.qrc
src/qml/components/: Dialer.qml  DialerButton.qml  MessagesInterface.qml  NemoIconButton.qml  SearchBox.qml
src/qml/pages/: CallLogPage.qml  CallView.qml  ContactDelegate.qml  ContactDetails.qml  ContactsPage.qml  DialerPage.qml  FirstPage.qml
translations/: glacier-dialer.ts  glacier-dialer_cs.ts  glacier-dialer_de.ts  glacier-dialer_en.ts  glacier-dialer_fi.ts  glacier-dialer_pl.ts  glacier-dialer_ru.ts  glacier-dialer_uk.ts
